# sarna/routes/api/controller/finding_controller.py
@@ -2,6 +2,8 @@ import connexion
 import six
 
 from sarna.routes.api import util
+from sarna.model import FindingTemplate as FindingTemplateORM
+from sarna.routes.api.models import FindingTemplate, PaginatedEnvelop
 
 
 def get_findign_templates(page=None, page_size=None):  # noqa: E501
@@ -16,4 +18,17 @@ def get_findign_templates(page=None, page_size=None):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+
+    findings_query = FindingTemplateORM.query.filter()
+    total_count = findings_query.count()
+    findingsOrm = findings_query.limit(page_size).offset(page_size*page)
+    data = PaginatedEnvelop(
+        total=total_count,
+        page_size=page_size,
+        page=page,
+        data=[
+            FindingTemplate.from_dict(f) for f in findingsOrm
+        ]
+    )
+
+    return data.to_dict()
