# swagger/api.yaml
@@ -20,6 +20,8 @@ tags:
   description: "Access Finding database"
 - name: assessment
   description: "Operate with assessments"
+- name: user
+  description: "System Users"
 
 consumes:
 - "application/json"
@@ -57,6 +59,29 @@ parameters:
 
 paths:
   /client:
+    post:
+      tags:
+        - client
+      summary: "Create a new client"
+      operationId: createClient
+      parameters:
+        - in: body
+          name: client
+          description: The client to create.
+          schema:
+            $ref: '#/definitions/Client'
+      responses:
+        403:
+          $ref: '#/responses/Forbidden'
+        201:
+          description: "Client data"
+          schema:
+            allOf:
+            - $ref: '#/definitions/Envelop'
+            - type: object
+              property:
+                data:
+                  $ref: '#/definitions/Client'
     get:
       tags:
       - client
@@ -79,6 +104,30 @@ paths:
                   items:
                     $ref: '#/definitions/Client'
   /client/{client_id}:
+    patch:
+      tags:
+      - client
+      summary: "Modify client"
+      operationId: modifyClient
+      parameters:
+      - name: client_id
+        in: path
+        description: Client ID
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: client
+        description: The client to create.
+        schema:
+          $ref: '#/definitions/Client'
+      responses:
+        404:
+          $ref: '#/responses/NotFound'
+        403:
+          $ref: '#/responses/Forbidden'
+        204:
+          $ref: '#/responses/NoContent'
     get:
       tags:
       - client
@@ -106,6 +155,17 @@ paths:
                 data:
                   $ref: '#/definitions/Client'
   /client/{client_id}/assessment:
+    post:
+      tags:
+      - client
+      summary: "Create a new assessment for client"
+      operationId: createAssessment
+      parameters:
+      - in: body
+        name: client
+        description: The assessment to create.
+        schema:
+          $ref: '#/definitions/Assessment'
     get:
       tags:
         - client
@@ -171,6 +231,28 @@ paths:
                     $ref: '#/definitions/Template'
   /client/{client_id}/template/{template_id}:
 
+  /assessment:
+    get:
+      tags:
+      - assessment
+      summary: "Get a list of assessments"
+      operationId: getAssessments
+      parameters:
+      - in: query
+        $ref: '#/parameters/page'
+      - in: query
+        $ref: '#/parameters/page_size'
+      responses:
+        200:
+          description: "List of assessments"
+          schema:
+            allOf:
+            - $ref: '#/definitions/PaginatedEnvelop'
+            - type: object
+              properties:
+                data:
+                  items:
+                    $ref: '#/definitions/Assessment'
   /assessment/{assessment_id}:
     get:
       tags:
@@ -260,7 +342,7 @@ paths:
   /user:
     get:
       tags:
-      - client
+      - user
       summary: "Get a list of Users"
       operationId: getUsers
       parameters:
@@ -289,6 +371,8 @@ responses:
     description: Forbidden
     schema:
       $ref: '#/definitions/Envelop'
+  NoContent:
+    description: No Content
 definitions:
   Envelop:
     type: object
@@ -415,6 +499,9 @@ definitions:
   ##########
   Client:
     type: object
+    required:
+      - short_name
+      - long_name
     properties:
       short_name:
         type: string
@@ -490,3 +577,5 @@ definitions:
         $ref: '#/definitions/UserName'
       user_type:
         $ref: '#/definitions/UserType'
+    required:
+      - username
